--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -33,7 +33,8 @@
 .headerGrid a {
   text-decoration: none;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 18px;
+  z-index: 1;
 }
 
 @media only screen and (min-width: 1080px) {
@@ -42,5 +43,9 @@
   }
   .headerGrid nav {
     justify-self: auto;
+  }
+
+  .headerGrid a {
+    font-size: 16px;
   }
 }
