--- a/src/pages/homepage/hero/hero.module.css
+++ b/src/pages/homepage/hero/hero.module.css
@@ -1,7 +1,7 @@
 .heroGrid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding-bottom: 30px;
+  height: 630px;
 }
 
 .heroImage {
@@ -78,5 +78,9 @@
   .heroImage {
     background-position: center;
     width: 745px;
+  }
+
+  .heroGrid {
+    height: 680px;
   }
 }
