--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -4,8 +4,8 @@
   cursor: pointer;
 }
 
-.white {
-  background-color: white;
+.trans {
+  background-color: transparent;
   border: 2px solid #c1ae95;
   border-radius: 3px;
   font-weight: 600;
@@ -15,8 +15,24 @@
   color: #cf754a;
 }
 
-.white:hover {
+.trans:hover {
   background-color: #cf754a;
   color: #ffff;
   border: 2px solid #cf754a;
+}
+
+.white {
+  background-color: white;
+  border: 2px solid #cf754a;
+  border-radius: 3px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 28px;
+  color: #745330;
+}
+
+.white:hover {
+  background-color: #cf754a;
+  border: 2px solid #cf754a;
+  color: white;
 }
