--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,18 @@ a {
 a:hover {
   color: #cf754a;
 }
+
+/* ---------------------------- ScrollBar ------------------------------------ */
+
+body::-webkit-scrollbar {
+  width: 0.3em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #cf754a 0%, #d89b5a 100%);
+  outline: none;
+}
