--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   position: relative;
   max-width: 1600px;
   margin: 0 auto;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
