--- a/src/components/connectButton/connectButton.module.css
+++ b/src/components/connectButton/connectButton.module.css
@@ -1,23 +1,22 @@
 .buttonContainer {
   width: 90%;
-  margin: 10px auto 10px auto;
+  margin: 50px auto 10px auto;
   text-align: right;
 }
 
 .buttonContainer button {
   background-color: transparent;
-  width: 137px;
-  height: 38px;
+  padding: 10px 28px;
 
-  border: 2px solid #0bb1f7;
+  border: 2px solid #cf754a;
   border-radius: 5px;
   cursor: pointer;
   font-size: 14px;
-  color: #0bb1f7;
+  color: #745330;
 }
 
 .buttonContainer button:hover {
-  background-color: #0bb1f7;
+  background-color: #cf754a;
   color: white;
 }
 
