--- a/src/components/listItems/listItems.module.css
+++ b/src/components/listItems/listItems.module.css
@@ -16,7 +16,13 @@
   margin: 0;
   font-style: normal;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 24px;
   color: #745330;
+}
+
+@media only screen and (min-width: 1080px) {
+  .listItems p {
+    font-size: 16px;
+  }
 }
