--- a/src/pages/homepage/mintSection/mintSection.module.css
+++ b/src/pages/homepage/mintSection/mintSection.module.css
@@ -58,7 +58,7 @@
 
 .mintSectionText > p {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 23px;
   color: #745330;
   text-align: justify;
@@ -79,6 +79,12 @@
   .wheelingImage {
     width: 300px;
     height: 250px;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  .mintSectionText > p {
+    font-size: 16px;
   }
 }
 
