--- a/src/components/mintCard/mintCard.module.css
+++ b/src/components/mintCard/mintCard.module.css
@@ -22,7 +22,7 @@
   padding: 0 20px 10px 20px;
 }
 
-.mintCard > div div {
+.mintCard > div > div {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
