--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -122,6 +122,23 @@
   cursor: pointer;
 }
 
+.resend h3 {
+  color: red;
+  text-align: center;
+  font-size: 16px;
+}
+
+.resend p {
+  font-size: 14px;
+}
+
+.resend span {
+  font-size: 13px;
+  color: green;
+  display: block;
+  text-align: center;
+}
+
 @media only screen and (min-width: 545px) {
   .loginPop {
     left: calc(50% - 220px);
