--- a/src/pages/admin/admin.module.css
+++ b/src/pages/admin/admin.module.css
@@ -24,7 +24,8 @@
   background-color: white;
   border-radius: 10px;
   border: none;
-  width: 180px;
+  width: max-content;
+  padding: 0 40px;
   height: 120px;
   margin: 45px 0;
   cursor: pointer;
