--- a/src/pages/admin/components/nfts/addNFT/addNFT.module.css
+++ b/src/pages/admin/components/nfts/addNFT/addNFT.module.css
@@ -125,7 +125,8 @@
 @media only screen and (min-width: 545px) {
   .loginPop {
     left: calc(50% - 220px);
-    width: max-content;
+    min-width: 350px;
+    max-width: max-content;
     padding: 20px 60px 20px 60px;
   }
 }
