--- a/src/pages/admin/components/paymentDue/paymentDue.module.css
+++ b/src/pages/admin/components/paymentDue/paymentDue.module.css
@@ -1,9 +1,10 @@
 .Header,
 .Row {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: 340px 200px 200px;
   align-items: center;
   justify-items: center;
+  width: max-content;
 }
 
 .Header p {
@@ -52,11 +53,33 @@
 
 .userContainer {
   padding: 35px;
+  overflow-x: scroll;
+}
+
+.userContainer::-webkit-scrollbar {
+  height: 10px;
+}
+
+.userContainer::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+}
+
+.userContainer::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #cf754a 0%, #d89b5a 100%);
+  outline: none;
+}
+.userContainer hr {
+  width: calc(340px + 200px + 170px);
 }
 
 .Row img {
   width: 20px;
   cursor: pointer;
+}
+
+.paginationContainer {
+  margin-top: 15px;
+  padding-bottom: 15px;
 }
 
 @media only screen and (min-width: 1080px) {
@@ -65,5 +88,13 @@
   }
   .Row > * {
     margin: 0;
+  }
+  .Header,
+  .Row {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    width: 100%;
+  }
+  .userContainer hr {
+    width: 100%;
   }
 }
