--- a/src/pages/admin/components/paymentDue/paymentDue.module.css
+++ b/src/pages/admin/components/paymentDue/paymentDue.module.css
@@ -82,6 +82,23 @@
   padding-bottom: 15px;
 }
 
+.paymentsButton {
+  grid-column: 1/4;
+  justify-self: flex-end;
+  background-color: transparent;
+  padding: 10px 28px;
+  border: 2px solid #cf754a;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  color: #745330;
+}
+
+.paymentsButton:hover {
+  background-color: #cf754a;
+  color: white;
+}
+
 @media only screen and (min-width: 1080px) {
   .Header p {
     margin: 15px 0;
