--- a/src/components/returnNFT/returnRow/returnRow.module.css
+++ b/src/components/returnNFT/returnRow/returnRow.module.css
@@ -1,13 +1,14 @@
-.Header,
-.Row {
+.stakedHeader,
+.stakedRow {
   display: grid;
-  grid-template-columns: 340px 200px 200px 300px 130px 180px;
+  grid-template-columns: 150px 150px 150px 150px;
   align-items: center;
   justify-items: center;
   width: max-content;
+  margin: 0 auto;
 }
 
-.Header p {
+.stakedHeader p {
   font-style: normal;
   font-weight: 600;
   font-size: 15px;
@@ -16,24 +17,24 @@
   margin: 5px 0;
 }
 
-.Row {
+.stakedRow {
   padding: 10px 0;
 }
 
-.Row > * {
+.stakedRow > * {
   margin: 7px 0;
 }
 
-.Row span {
+.stakedRow span {
   font-style: normal;
   font-weight: 600;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 19px;
 
   color: #949494;
 }
 
-.Row button {
+.stakedRow button {
   background: #ffffff;
   border: 2px solid #cf754a;
   box-shadow: 0px 1px 8px 1px rgb(0 0 0 / 20%);
@@ -46,7 +47,7 @@
   font-size: 13px;
 }
 
-.Row button:hover {
+.stakedRow button:hover {
   background-color: #cf754a;
   color: white;
 }
@@ -60,23 +61,6 @@
   height: 10px;
 }
 
-.paymentsButton {
-  grid-column: 1/4;
-  justify-self: flex-end;
-  background-color: transparent;
-  padding: 10px 28px;
-  border: 2px solid #cf754a;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 14px;
-  color: #745330;
-}
-
-.paymentsButton:hover {
-  background-color: #cf754a;
-  color: white;
-}
-
 .userContainer::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
 }
@@ -86,12 +70,7 @@
   outline: none;
 }
 .userContainer hr {
-  width: calc(340px + 200px + 200px + 300px + 280px);
-}
-
-.Row img {
-  width: 20px;
-  cursor: pointer;
+  width: 630px;
 }
 
 .paginationContainer {
@@ -99,11 +78,20 @@
   padding-bottom: 15px;
 }
 
-@media only screen and (min-width: 1080px) {
-  .Header p {
+@media only screen and (min-width: 1030px) {
+  .stakedHeader p {
     margin: 15px 0;
   }
-  .Row > * {
+  .stakedRow > * {
     margin: 0;
+  }
+
+  .stakedHeader,
+  .stakedRow {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    width: 100%;
+  }
+  .userContainer hr {
+    width: 100%;
   }
 }
